<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground"
                tools:context="com.example.manfredi.riddit.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage" />

    <TextView
        android:text="@string/app_name"
        android:id="@+id/title"
        style="@style/AuthTitle" />

    <TextView
        android:text="@string/subtitle"
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubTitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

    <EditText
        style="@style/AuthEditText"
        android:id="@+id/usernameField"
        android:textColor="@color/background_purple"
        android:hint="@string/username_field" >

        <requestFocus />
    </EditText>

    <EditText
        android:inputType="textPassword"
        style="@style/AuthEditText"
        android:id="@+id/passwordField"
        android:textColor="@color/background_purple"
        android:hint="@string/password_field"/>

    <EditText
        style="@style/AuthEditText"
        android:inputType="textEmailAddress"
        android:textColor="@color/background_purple"
        android:id="@+id/emailField"
        android:hint="@string/email_field"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider" />

    <Button
        android:text="@string/sign_up_field"
        android:id="@+id/signupButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_alignLeft="@+id/backgroundImage"
        android:layout_marginRight="0dp"
        style="@style/AuthButton" />

    <Button
        android:text="@string/cancel_button_label"
        android:id="@+id/cancelButton"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_alignRight="@+id/backgroundImage"
        style="@style/AuthButton" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpProgressBar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp" />
</RelativeLayout>
